  - Added achievement Czech Monopoly: "Have more §YŠkoda Factories§! and §YŠkoda Research Slots§! than §YIndustrial Complexes§! and §YResearch Slots§! at any time, while having at least 5 §YIndustrial Complexes§!"
  - Added achievement One Man Army: "Train Petr Pavel to at least §Y75%§! in every §YTraining Card§! at the same time"

 AI:
  - Added AI to Abkhazia to befriend South Ossetia
  - AI should try to maximize internal faction opinion buffs in general to keep them more on the path
  - Arabian States should befriend one another and become closer to one another via diplomatic options
  - Increased the manpower from the Recruit Foreign Fighters decision from the factions
  - The AI should now build Network Infrastructure when they research the next "G"
  - Russian AI should no longer death war and declare conflict when already at war with NATO
  - The AI should no longer instantly revoke the satellite access it grants and now will hold the access for three months before revoking
  - Armenia's AI should now be more dynamic in the way they take war goal focuses so they don't suicide
  - The AI should now be less likely to invest Fossil Power Plant if you are running heavy consumption, however, inversely they will be more likely to invest if you are running heavy restriction
  - Made the AI a little more likely to join NATO and the European Union
  - Implemented a hard block on the Become a NATO Aspirant for nationalist or salafist nations (if a European nation is somehow salafist I'd be surprised. Excluding you Bosnia.)
  - Made the Spanish AI a little more apt at navigating it's focus tree
  - Spanish AI should now recruit Foreign Legion and Regulares
  - Italian AI should no longer power push characters if they have the Mafia idea
  - Fixed the AI liberating stuff to Salafist. No, no, no silly western nations. ISIS shouldn't be stronger!