@@ -386,6 +386,41 @@ africa_paradis = {
 	}
 }
 
+pan_african_highway = {
+	possible = {
+		difficulty > 1
+		has_any_custom_difficulty_setting = no
+		game_rules_allow_achievements = yes
+		is_african_nation = yes
+	}
+
+	happened = {
+		has_railway_connection = {
+			start_province = 7011
+			target_province = 12589
+		}
+	}
+}
+
+afri_net = {
+	possible = {
+		difficulty > 1
+		has_any_custom_difficulty_setting = no
+		game_rules_allow_achievements = yes
+		is_african_nation = yes
+	}
+
+	happened = {
+		custom_trigger_tooltip = {
+			tooltip = afri_net_tt
+			all_of_scopes = {
+				array = global.african_states
+				check_variable = { building_level@internet_station > 2 }
+			}
+		}
+	}
+}
+
 achievement_diamonds_are_a_girls_best_friend = {
 	possible = {
 		difficulty > 1
