@@ -3465,6 +3465,23 @@ setup_global_arrays = {
 		add_to_array = { global.gcc_member_state = OMA }
 	}
 
+	# Africa States
+	every_country = {
+		limit = {
+			is_african_nation = yes
+		}
+		every_owned_state = {
+			limit = {
+				OR = {
+					is_on_continent = africa
+					is_on_continent = middle_east
+				}
+				NOT = { is_in_array = { global.african_states = THIS.id } }
+			}
+			add_to_array = { global.african_states = THIS.id }
+		}
+	}
+
 	# SCO
 	add_to_array = { global.possible_sco_member_state = CHI }
 	add_to_array = { global.possible_sco_member_state = AFG }
