@@ -732,10 +732,8 @@
 				}
 				if = {
 					limit = { original_tag = PER }
-					NOT = {
-						emerging_hardline_shiite_are_in_power = yes
-						emerging_moderate_shiite_are_in_power = yes
-					}
+					emerging_hardline_shiite_are_not_in_power = yes
+					emerging_moderate_shiite_are_not_in_power = yes
 				}
 				#countries with a shiite population
 				OR = {
@@ -759,6 +757,9 @@
 					original_tag = DRU
 					original_tag = NIG
 					original_tag = OMA
+					original_tag = UAE
+					original_tag = QAT
+					original_tag = YEM
 				}
 				has_political_power > 99
 			}
@@ -774,10 +775,8 @@
 				}
 				if = {
 					limit = { original_tag = PER }
-					NOT = {
-						emerging_hardline_shiite_are_in_power = yes
-						emerging_moderate_shiite_are_in_power = yes
-					}
+					emerging_hardline_shiite_are_not_in_power = yes
+					emerging_moderate_shiite_are_not_in_power = yes
 				}
 
 				if = {
@@ -797,10 +796,8 @@
 				}
 				if = {
 					limit = { original_tag = PER }
-					NOT = {
-						emerging_hardline_shiite_are_in_power = yes
-						emerging_moderate_shiite_are_in_power = yes
-					}
+					emerging_hardline_shiite_are_not_in_power = yes
+					emerging_moderate_shiite_are_not_in_power = yes
 				}
 			}
 			opt_party9_ban_button_click_enabled = {
@@ -832,10 +829,8 @@
 				}
 				if = {
 					limit = { original_tag = PER }
-					NOT = {
-						emerging_hardline_shiite_are_in_power = yes
-						emerging_moderate_shiite_are_in_power = yes
-					}
+					emerging_hardline_shiite_are_not_in_power = yes
+					emerging_moderate_shiite_are_not_in_power = yes
 				}
 				OR = {
 					original_tag = PER
@@ -858,6 +853,9 @@
 					original_tag = DRU
 					original_tag = NIG
 					original_tag = OMA
+					original_tag = UAE
+					original_tag = QAT
+					original_tag = YEM
 				}
 				has_political_power > 99
 			}
@@ -873,10 +871,8 @@
 				}
 				if = {
 					limit = { original_tag = PER }
-					NOT = {
-						emerging_hardline_shiite_are_in_power = yes
-						emerging_moderate_shiite_are_in_power = yes
-					}
+					emerging_hardline_shiite_are_not_in_power = yes
+					emerging_moderate_shiite_are_not_in_power = yes
 				}
 
 				if = {
@@ -896,10 +892,8 @@
 				}
 				if = {
 					limit = { original_tag = PER }
-					NOT = {
-						emerging_hardline_shiite_are_in_power = yes
-						emerging_moderate_shiite_are_in_power = yes
-					}
+					emerging_hardline_shiite_are_not_in_power = yes
+					emerging_moderate_shiite_are_not_in_power = yes
 				}
 			}
 			opt_party10_ban_button_click_enabled = {
