@@ -189,6 +189,11 @@
  africa_paradis_DESC: "As an African country, form the United States of Africa and have a higher GDP than any European country."
  africa_paradis_usa_tt: "Has formed the United States of Africa"
  africa_paradis_gdp_tt: "Our GDP is higher than any European country"
+ pan_african_highway_NAME: "Pan-African Highway"
+ pan_african_highway_DESC: "As an African country have a railway connection from Cairo to Cape Town."
+ afri_net_NAME: "Afri-Net"
+ afri_net_DESC: "As an African country ensure every African state must have at least Network Infrastructure of 3 or more."
+ afri_net_tt: "Every African state must have at least Network Infrastructure level of 3 or more."
  achievement_diamonds_are_a_girls_best_friend_NAME: "Diamonds Are A Ruler's Best Friend"
  achievement_diamonds_are_a_girls_best_friend_DESC: "Extract over 500 Precious Metals."
  chiraq_NAME: "Chiraq"
