@@ -5,6 +5,8 @@ v1.10.5
   - Added achievement CzechosloGRANDia: "As Czechoslovakia, control all Czech, Slovakia and former Austro-Hungary territories, Silesia region and Zakarpattya state"
   - Added achievement Czech Monopoly: "Have more §YŠkoda Factories§! and §YŠkoda Research Slots§! than §YIndustrial Complexes§! and §YResearch Slots§! at any time, while having at least 5 §YIndustrial Complexes§!"
   - Added achievement One Man Army: "Train Petr Pavel to at least §Y75%§! in every §YTraining Card§! at the same time"
+  - Added achievement Afri-Net: "As an African nation ensure every African state has Network Infrastructure of at least 3"
+  - Added achievement Pan-African Highway: "As an African nation have a railway connection from Cairo to Cape Town"
 
  AI:
   - Added AI to Abkhazia to befriend South Ossetia
@@ -91,6 +93,8 @@ v1.10.5
   - Fixed M10 Booker having 2 machine guns
   - Fixed the weird gets blank event as USA when getting the Housing Market Crash
   - You should no longer be able to see the "Ask Debt Bailout from Your nation here" when you have no nations influencing you
+  - Shi'ism can now be spread in UAE, QAT and YEM
+  - Fixes to triggers to boosting Shi'ism in Iran
 
  Content:
   - NEW FOCUS TREES: Urals, Kuban, Romania, Gagauzia, Southern Republic, Czech Republic
